# bofhound

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml
bofhound/: __main__.py  logger.py  writer.py
bofhound/ad/: __init__.py  adds.py
bofhound/ad/models/: __init__.py  bloodhound_computer.py  bloodhound_domain.py  bloodhound_domaintrust.py  bloodhound_gpo.py  bloodhound_group.py  bloodhound_object.py  bloodhound_ou.py  bloodhound_schema.py  bloodhound_user.py
bofhound/parsers/: __init__.py  brc4_ldap_sentinel.py  ldap_search_bof.py
tests/ad/: test_adds.py
tests/ad/models/: test_bloodhound_computer.py  test_bloodhound_object.py  test_bloodhound_user.py
tests/parsers/: test_brc4_ldap_sentinel.py  test_ldap_search_bof.py
tests/test_data/: __init__.py
tests/test_data/json_output/: computers_20220413_204956.json  domains_20220413_204956.json  groups_20220413_204957.json  users_20220413_204956.json
